--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "styled-components": "^5.0.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.0.1"
   }
 }
